--- a/.github/workflows/SSH_for_VLCBuild.yml
+++ b/.github/workflows/SSH_for_VLCBuild.yml
@@ -1,31 +1,27 @@
 name: Interactive Debian Bullseye VLC Build
 
 on:
-  workflow_dispatch:  # manual trigger
+  workflow_dispatch:
 
 jobs:
   interactive-build:
     runs-on: ubuntu-22.04
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Docker container with Debian Bullseye
+      - name: Install Docker and tmate
+        run: |
+          sudo apt update
+          sudo apt install -y docker.io tmate
+
+      - name: Start Debian Bullseye container
         run: |
           docker pull debian:bullseye
           docker run -d --name bullseye-build -it debian:bullseye sleep infinity
 
-      - name: Install tmate
-        run: |
-          sudo apt update
-          sudo apt install -y tmate docker.io
-          
-      - name: Launch tmate session inside container
+      - name: Start tmate session
         uses: mxschmitt/action-tmate@v3
         with:
           install: true
-        env:
-          DOCKER_CONTAINER: bullseye-build
-        run: |
-          echo "Attaching to Debian Bullseye container..."
-          docker exec -it $DOCKER_CONTAINER bash
