--- a/.github/workflows/SSH_for_VLCBuild.yml
+++ b/.github/workflows/SSH_for_VLCBuild.yml
@@ -29,3 +29,8 @@ jobs:
         uses: mxschmitt/action-tmate@v3
         with:
           install: true
+- name: Upload VLC artifact
+  uses: actions/upload-artifact@v3
+  with:
+    name: vlc-bullseye
+    path: /tmp/vlc-bullseye.tar.gz
